--- a/src/main/resources/view/ArticleCard.fxml
+++ b/src/main/resources/view/ArticleCard.fxml
@@ -24,9 +24,11 @@
         <Label fx:id="name" styleClass="cell_big_label" />
       </HBox>
       <FlowPane fx:id="tags" />
-      <Label fx:id="phone" styleClass="cell_small_label" />
+      <!--<Label fx:id="phone" styleClass="cell_small_label" />-->
+      <Label fx:id="phone" styleClass="hidden" />
       <Label fx:id="description" styleClass="cell_small_label" />
-      <Label fx:id="email" styleClass="cell_small_label" />
+      <!--<Label fx:id="email" styleClass="cell_small_label" />-->
+      <Label fx:id="email" styleClass="hidden" />
     </VBox>
   </GridPane>
 </HBox>
