--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -10,6 +10,13 @@
     -fx-opacity: 0.9;
 }
 
+.label-bo {
+    -fx-font-size: 16pt;
+    -fx-font-family: "Segoe UI Bold";
+    -fx-text-fill: white;
+    -fx-opacity: 1;
+}
+
 .label-bright {
     -fx-font-size: 11pt;
     -fx-font-family: "Segoe UI Semibold";
@@ -121,9 +128,20 @@
 }
 
 .cell_big_label {
-    -fx-font-family: "Segoe UI Semibold";
-    -fx-font-size: 16px;
+    -fx-font-family: "Segoe UI Bold";
+    -fx-font-size: 17px;
     -fx-text-fill: white;
+}
+
+.articleName {
+    -fx-font-size: 70px;
+    -fx-text-fill: white;
+}
+
+.hidden {
+    -fx-padding: 0;
+    -fx-margin: 0;
+    -fx-font-size: 0.05px;
 }
 
 .cell_small_label {
@@ -150,7 +168,7 @@
 .text-area {
     -fx-background-color: transparent;
     -fx-font-family: "Segoe UI Semibold";
-    -fx-font-size: 11pt;
+    -fx-font-size: 19pt;
     -fx-text-fill: white;
 }
 
@@ -360,3 +378,18 @@
     -fx-background-radius: 2;
     -fx-font-size: 11;
 }
+
+#tagsBig {
+    -fx-hgap: 7;
+    -fx-vgap: 3;
+}
+
+#tagsBig .label {
+    -fx-text-fill: white;
+    -fx-background-color: #3e7b91;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 5;
+    -fx-background-radius: 5;
+    -fx-font-size: 25;
+}
+
